test/extra/negative/1bitBinopBus.net
INPUT a, b
OUTPUT r
VAR a, b:4, r
IN
r = AND a b
